fixed alignment and links

--- a/src/App.css
+++ b/src/App.css
@@ -37,90 +37,3 @@
   }
 }
 
-.navbar {
-  position: fixed;
-  top: .25rem;
-  left: 0;
-  width: calc(100% - 4rem);
-  height: 3.125rem;
-  background-color: transparent;
-  backdrop-filter: blur(0.313rem);
-  /* box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1); */
-  z-index: 1000;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 2rem;
-  margin: 0 2rem 0 2rem;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-.nav-left {
-  display: flex;
-  gap: 4.5rem;
-  align-items: center;
-  min-width: max-content;
-  z-index: 1;
-  width: 33%;
-  padding: 0 6.5rem;
-}
-
-.nav-right {
-  display: flex;
-  gap: 3.5rem;
-  align-items: center;
-  min-width: max-content;
-  z-index: 1;
-  width: 33%;
-  padding: 0.25rem 2rem 0 2rem;
-}
-
-.nav-right {
-  justify-content: flex-end;
-}
-
-.nav-left {
-  justify-content: flex-start;
-}
-
-.nav-title {
-  color: white;
-  font-size: 1.65rem;
-  font-weight: 500;
-  position: absolute;
-  left: 48%;
-  transform: translateX(-50%);
-  z-index: 0;
-  width: 33%;
-  text-align: center;
-}
-
-.nav-item {
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-  font-size: 1rem;
-  font-weight: 500;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-}
-
-.nav-item:hover {
-  color: #aeaeae;
-}
-
-.bi-github {
-  font-size: 1.25rem;
-}
-
-.bi-linkedin {
-  font-size: 1.25rem;
-}
-
-.bi-instagram {
-  font-size: 1.25rem;
-}
-
-.bi-github, .bi-linkedin, .bi-instagram {
-  position: relative;
-  top: 0.125rem;
-}
